Fix scrollbar issues

--- a/client_dev/app/stylesheets/layout.styl
+++ b/client_dev/app/stylesheets/layout.styl
@@ -60,9 +60,10 @@ div.sl-panel
 	shadow()
 	position: absolute
 	top: $header-height
-	overflow: scroll
-	left: 0
 	bottom: $footer-height
+	left: 0
+	overflow-y: scroll
+    overflow-x: hidden
 	background-color: $dark-backdrop
 
 
