--- a/client_dev/app/stylesheets/sidelist.styl
+++ b/client_dev/app/stylesheets/sidelist.styl
@@ -8,8 +8,6 @@ div.sidelist-backdrop
 
 div.sidelist
 	width: $sidelist-width
-	overflow-y: scroll
-	overflow-x: hidden
 	background: $dark-backdrop
 
 .sl-item
